--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@ Babel==2.10.3
 backcall==0.2.0
 beautifulsoup4==4.11.1
 bleach==5.0.1
+Brotli==1.0.9
 captum==0.5.0
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
+click==8.1.3
 contourpy==1.0.5
 cycler==0.11.0
 debugpy==1.6.3
@@ -19,6 +21,8 @@ defusedxml==0.7.1
 entrypoints==0.4
 executing==1.1.0
 fastjsonschema==2.16.2
+Flask==2.2.2
+Flask-Compress==1.13
 fonttools==4.37.4
 idna==3.4
 imageio==2.22.1
@@ -28,6 +32,7 @@ ipykernel==6.16.0
 ipython==8.5.0
 ipython-genutils==0.2.0
 ipywidgets==8.0.2
+itsdangerous==2.1.2
 jedi==0.18.1
 Jinja2==3.1.2
 joblib==1.2.0
@@ -103,5 +108,6 @@ urllib3==1.26.12
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.4.1
+Werkzeug==2.2.2
 widgetsnbextension==4.0.3
 zipp==3.8.1
