--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ requires-python = ">=3.8"
 dependencies = [
     "numpy==1.23.3",
     "scikit-learn~=1.1.2",
-    "torch==1.12.1"
+    "torch==1.12.1",
+    "captum==0.5.0"
 
 ]
 classifiers = [
